# moe3-server-py

./: .gitignore  pyproject.toml
docs/: seq_login.puml
src/app/: main.py
src/models/: order_model.py  path_model.py  phase_model.py  player_model.py  power_model.py  province_model.py  table_model.py  territory_model.py  unit_model.py  user_model.py
src/routers/: __init__.py  user_router.py
src/schemas/: user_schema.py
src/services/: user_service.py
src/setup/: master_data_generator.py  setting.py  settings.py
tests/: conftest.py  settings.py  test_phase_model.py  test_player_model.py  test_table_model.py  test_unit_model.py  test_user_model.py
